<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="226dp"
        tools:layout_editor_absoluteY="186dp">

        <TextView
            android:id="@+id/score1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/score1_label" />

        <EditText
            android:id="@+id/score1_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/score1_value" />

        <Button
            android:id="@+id/+"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/inc_button" />

        <Button
            android:id="@+id/-"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dec_button" />

        <TextView
            android:id="@+id/score2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/score2_label" />

        <EditText
            android:id="@+id/score2_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/score2_value" />

        <Button
            android:id="@+id/+_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/inc_button" />

        <Button
            android:id="@+id/-_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dec_button" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <RadioButton
                android:id="@+id/inc_by_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/one_radio_button" />

            <RadioButton
                android:id="@+id/inc_by_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/two_radio_button" />

            <RadioButton
                android:id="@+id/inc_by_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/three_radio_button" />
        </RadioGroup>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>